# cryptopp-autotools

./: .appveyor.yml  .travis.yml  Makefile.am  README.md  bootstrap.sh  configure.ac  libcryptopp.pc.in
